[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
bitflags = "1.0"
libc = "0.2"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []
v2_24 = []
v2_26 = ["v2_24"]
v2_26_3 = ["v2_26"]
v2_28 = ["v2_26_3"]
v2_30 = ["v2_28"]
v2_32 = ["v2_30"]
v2_34 = ["v2_32"]
v2_36 = ["v2_34"]
v2_38 = ["v2_36"]
v2_40 = ["v2_38"]
v2_42 = ["v2_40"]
v2_44 = ["v2_42"]
v2_46 = ["v2_44"]
v2_48 = ["v2_46"]
v2_50 = ["v2_48"]
v2_52 = ["v2_50"]
v2_54 = ["v2_52"]
v2_56 = ["v2_54"]
v2_58 = ["v2_56"]
v2_60 = ["v2_58"]

[lib]
name = "soup_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "Soup FFI crate for Rust"
license = "MIT"
links = "soup"
name = "soup-sys"
repository = "https://github.com/gtk-rs/soup-sys-rs"
version = "0.7.0"
