[build-dependencies]
pkg-config = "0.3.7"
system-deps = "1.3"

[dependencies]
bitflags = "1.0"
libc = "0.2"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core.git"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core.git"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core.git"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
dox = []
v2_24 = []
v2_26 = ["v2_24"]
v2_26_3 = ["v2_26"]
v2_28 = ["v2_26_3"]
v2_30 = ["v2_28"]
v2_32 = ["v2_30"]
v2_34 = ["v2_32"]
v2_36 = ["v2_34"]
v2_38 = ["v2_36"]
v2_40 = ["v2_38"]
v2_42 = ["v2_40"]
v2_44 = ["v2_42"]
v2_46 = ["v2_44"]
v2_48 = ["v2_46"]
v2_50 = ["v2_48"]
v2_52 = ["v2_50"]
v2_54 = ["v2_52"]
v2_56 = ["v2_54"]
v2_58 = ["v2_56"]
v2_60 = ["v2_58"]
v2_62 = ["v2_60"]
v2_66 = ["v2_62"]
v2_68 = ["v2_66"]
v2_70 = ["v2_68"]

[lib]
name = "soup_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "Soup FFI crate for Rust"
license = "MIT"
links = "soup"
name = "soup-sys"
repository = "https://github.com/gtk-rs/soup-sys-rs"
version = "0.10.0"
[package.metadata.system-deps.libsoup_2_4]
name = "libsoup-2.4"
version = "0.0"

[package.metadata.system-deps.libsoup_2_4.feature-versions]
v2_24 = "2.24"
v2_26 = "2.26"
v2_26_3 = "2.26.3"
v2_28 = "2.28"
v2_30 = "2.30"
v2_32 = "2.32"
v2_34 = "2.34"
v2_36 = "2.36"
v2_38 = "2.38"
v2_40 = "2.40"
v2_42 = "2.42"
v2_44 = "2.44"
v2_46 = "2.46"
v2_48 = "2.48"
v2_50 = "2.50"
v2_52 = "2.52"
v2_54 = "2.54"
v2_56 = "2.56"
v2_58 = "2.58"
v2_60 = "2.60"
v2_62 = "2.62"
v2_66 = "2.66"
v2_68 = "2.68"
v2_70 = "2.70"
[package.metadata.docs.rs]
features = ["dox"]
